Reduce font size on menus to avoid wrapping in Safari.

--- a/telling_time_in_russian.css
+++ b/telling_time_in_russian.css
@@ -454,6 +454,7 @@ div#help-overlay {
   #quick-select {
     background: rgba(0, 0, 0, 0.7);
     color: #FFFFFF;
+    font-size: 14px;
     height: 100%;
     position: fixed;
     top: 40px;
